Login Error Response, Belum Include IKD

--- a/Ekr.Api.Identity/appsettings.json
+++ b/Ekr.Api.Identity/appsettings.json
@@ -20,10 +20,10 @@
   },
     "LDAPConfig": {
         "Url": "LDAP://192.168.12.134",
+        //"Url": "LDAP://192.168.12.111",
         "LdapHierarchy": "ou=accounts,o=bni,dc=co,dc=id",
         "IbsRoleLdapHierarchy": "ou=bniapps,o=bni,dc=co,dc=id",
-        //"AdminDn": "uid=19596,ou=accounts,o=bni,dc=co,dc=id",
-        //"AdminPassword": "bni1234",
+        "Port": 389,
         "IsActive": true,
         "MaxPoolSize": 10000,
         "ConnTimeOut": 30,
@@ -119,11 +119,14 @@
         "AccountNotActive": "91505 || Username tidak aktif, silahkan hubungi admin",
         "AccountCuti": "91506 || Username tidak aktif dikarenakan cuti",
         "CredentialSalah": "91507 || Username atau password salah",
-        "LDAPService": "915013 || LDAP Service Sedang Sibuk",
+        "LDAPService": "Gagal Terhubung Dengan LDAP.",
         "RefreshTokenFailed": "91510 || refresh token gagal",
         "RefreshTokenInvalid": "91511 || refresh token sudah tidak berlaku",
         "ErrorCreteTokenFromRefreshToken": "91512 || tidak dapat membuat token baru dari refresh token",
-        "LoginMaxLimitReached": "Anda telah gagal login berturut-turut. Mohon menunggu beberapa saat agar dapat login kembali."
+        "LoginMaxLimitReached": "Anda telah gagal login berturut-turut. Mohon menunggu beberapa saat agar dapat login kembali.",
+        "LDAPUnitNull": "915014 || Unit Tidak Terdaftar di LDAP, silahkan hubungi admin",
+        "LDAPRoleNull": "915015 || Role Tidak Terdaftar di LDAP, silahkan hubungi admin"
+
     },
   "SuksesMessageSettings": {
     "Sukses": "Success",
