--- a/Ekr.Api.Identity/appsettings.json
+++ b/Ekr.Api.Identity/appsettings.json
@@ -114,18 +114,19 @@
         "ImageTidakSesuai": "File images tidak sesuai!",
         "FailedAddTokenToDB": "91508 || Tidak dapat menambah token ke database",
         "NoAccess": "91502 || Anda Tidak Mempunyai Hak Akses, silahkan hubungi admin",
-        "UnitNotRegistered": "91503 || Unit Tidak Terdaftar di IBS, silahkan hubungi admin",
-        "RoleNotRegistered": "91504 || Role Tidak Terdaftar di IBS, silahkan hubungi admin",
+        "UnitNotRegistered": "91503 || Unit atau kantor tidak ditemukan, silahkan menghubungi WAG CAS/SSO",
+        "RoleNotRegistered": "91504 || Kewenangan tidak terdaftar",
         "AccountNotActive": "91505 || Username tidak aktif, silahkan hubungi admin",
         "AccountCuti": "91506 || Username tidak aktif dikarenakan cuti",
-        "CredentialSalah": "91507 || Username atau password salah",
+        //"CredentialSalah": "91507 || Username atau password salah", Diganti dengan error Masssage Baru Dari LDAP
+        "CredentialSalah": "91507 || Userid atau password salah,Silahkan reset password webmail melalui aplikasi CAS/SSO",
         "LDAPService": "Gagal Terhubung Dengan LDAP.",
         "RefreshTokenFailed": "91510 || refresh token gagal",
         "RefreshTokenInvalid": "91511 || refresh token sudah tidak berlaku",
         "ErrorCreteTokenFromRefreshToken": "91512 || tidak dapat membuat token baru dari refresh token",
         "LoginMaxLimitReached": "Anda telah gagal login berturut-turut. Mohon menunggu beberapa saat agar dapat login kembali.",
-        "LDAPUnitNull": "915014 || Unit Tidak Terdaftar di LDAP, silahkan hubungi admin",
-        "LDAPRoleNull": "915015 || Role Tidak Terdaftar di LDAP, silahkan hubungi admin"
+        "LDAPUnitNull": "915014 || Unit atau kantor tidak ditemukan, silahkan menghubungi WAG CAS/SSO",
+        "LDAPRoleNull": "915015 || User tidak memiliki hak akses,silahkan hubungi admin"
 
     },
   "SuksesMessageSettings": {
