--- a/Ekr.Api.Identity/appsettings.json
+++ b/Ekr.Api.Identity/appsettings.json
@@ -124,7 +124,7 @@
         "RefreshTokenFailed": "91510 || refresh token gagal",
         "RefreshTokenInvalid": "91511 || refresh token sudah tidak berlaku",
         "ErrorCreteTokenFromRefreshToken": "91512 || tidak dapat membuat token baru dari refresh token",
-        "LoginMaxLimitReached": "Anda telah gagal login berturut-turut. Mohon menunggu beberapa saat agar dapat login kembali.",
+        "LoginMaxLimitReached": "915016 || Anda telah gagal login berturut-turut. Mohon menunggu beberapa saat agar dapat login kembali.",
         "LDAPUnitNull": "915014 || Unit atau kantor tidak ditemukan, silahkan menghubungi WAG CAS/SSO",
         "LDAPRoleNull": "915015 || User tidak memiliki hak akses,silahkan hubungi admin"
 
