--- a/Ekr.Api.Identity/appsettings.json
+++ b/Ekr.Api.Identity/appsettings.json
@@ -118,7 +118,7 @@
         "RoleNotRegistered": "91504 || Kewenangan tidak terdaftar",
         "AccountNotActive": "91505 || Username tidak aktif, silahkan hubungi admin",
         "AccountCuti": "91506 || Username tidak aktif dikarenakan cuti",
-        //"CredentialSalah": "91507 || Username atau password salah", Diganti dengan error Masssage Baru Dari LDAP
+        //"CredentialSalah": "91507 || Username atau password salah", Diganti dengan error Masssage Baru Dari LDAP.
         "CredentialSalah": "91507 || Userid atau password salah,Silahkan reset password webmail melalui aplikasi CAS/SSO",
         "LDAPService": "Gagal Terhubung Dengan LDAP.",
         "RefreshTokenFailed": "91510 || refresh token gagal",
