update endpoint ikd 220925

--- a/Ekr.Api.EnrollmentIKD/appsettings.json
+++ b/Ekr.Api.EnrollmentIKD/appsettings.json
@@ -51,7 +51,8 @@
     "HeaderValueDev": "1a0114cda289e577-4a395cda-76476114"
   },
   "UrlScanIKD": {
-    "BaseUrl": "http://ikd-scan-qr-new-ikd-uat.apps.delta.ocp.hq.bni.co.id",
+    //"BaseUrl": "http://ikd-scan-qr-new-ikd-uat.apps.delta.ocp.hq.bni.co.id", -- endpoint uat
+    "BaseUrl": "http://ikd-scan-qr-new-cbd-dev.apps.dev-bpsoa.ocp.hq.bni.co.id", 
     "EndPointConsent": "/ikd/scan-qr/get-consent",
     "EndPointData": "/ikd/scan-qr/get-data",
     //"EndPoint": "/ikd/scanQR",
