--- a/Ekr.Api.Identity/appsettings.json
+++ b/Ekr.Api.Identity/appsettings.json
@@ -25,9 +25,10 @@
         "IbsRoleLdapHierarchy": "ou=bniapps,o=bni,dc=co,dc=id",
         "Port": 389,
         "IsActive": true,
-        "MaxPoolSize": 10000,
-        "ConnTimeOut": 30,
-        "PoolTimeOut": 60
+        "MaxPoolSize": 10000, // Jumlah maksimum koneksi aktif yang boleh disimpan dalam pool. Jika pool sudah penuh, user baru harus menunggu koneksi tersedia atau gagal jika melebihi waktu tunggu.
+        "ConnTimeOut": 30, // Batas waktu (detik) untuk membuat koneksi baru ke server LDAP.Jika server tidak merespons dalam 30 detik maka akan dianggap gagal.
+        "PoolTimeOut": 30, // Batas waktu (detik) menunggu koneksi tersedia di pool ketika semua koneksi sedang digunakan. Jika lebih dari 30 detik tidak ada koneksi yang kembali maka request akan gagal.
+        "IdleTimeout": 300 // Batas waktu (detik) koneksi dibiarkan menganggur (idle) sebelum dibuang dari pool. Jika sebuah koneksi tidak digunakan lebih dari 300 detik (5 menit), maka koneksi tersebut akan dihapus.
     },
   "ElasticApm": {
     "ServerUrls": "http://192.168.174.200:80/",
