--- a/Ekr.Api.BanchlinkCifUpdate/Properties/launchSettings.json
+++ b/Ekr.Api.BanchlinkCifUpdate/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Ekr.Api.BanchlinkCifUpdate": {
+    "Ekr.Api.BancslinkCifUpdate": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
